--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
   </style>
 
   <!-- Scripts -->
+  <script src="/env-config.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
