--- a/index.html
+++ b/index.html
@@ -370,7 +370,17 @@
   </style>
 
   <!-- Scripts -->
-  <script src="/env-config.js"></script>
+  <script>
+    window.ENV = {
+      SUPABASE_URL: "{{ SUPABASE_URL }}",
+      SUPABASE_ANON_KEY: "{{ SUPABASE_ANON_KEY }}",
+      OPENAI_API_KEY: "{{ OPENAI_API_KEY }}",
+      GOOGLE_TRANSLATE_KEY: "{{ GOOGLE_TRANSLATE_KEY }}",
+      EUREKA: {{ EUREKA }},
+      EDGE_FUNCTION_URL: "{{ EDGE_FUNCTION_URL }}"
+    };
+    console.log("Environment configuration loaded");
+  </script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
