--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       EUREKA: {{ EUREKA }},
       EDGE_FUNCTION_URL: "{{ EDGE_FUNCTION_URL }}"
     };
-    console.log("Environment configuration loaded:", window.ENV);
+    console.log("Environment loaded:", window.ENV);
   </script>
   <link rel="stylesheet" href="styles.css">
 </head>
