--- a/index.html
+++ b/index.html
@@ -7,17 +7,6 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta name="theme-color" content="#f9bd45">
-   <script>
-    window.ENV = {
-      SUPABASE_URL: "{{ SUPABASE_URL }}",
-      SUPABASE_ANON_KEY: "{{ SUPABASE_ANON_KEY }}",
-      OPENAI_API_KEY: "{{ OPENAI_API_KEY }}",
-      GOOGLE_TRANSLATE_KEY: "{{ GOOGLE_TRANSLATE_KEY }}",
-      EUREKA: {{ EUREKA }},
-      EDGE_FUNCTION_URL: "{{ EDGE_FUNCTION_URL }}"
-    };
-    console.log("Environment loaded:", window.ENV);
-  </script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -381,6 +370,7 @@
   </style>
 
   <!-- Scripts -->
+   <script src="/env-config.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
