--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <form id="submit-form">
         <!-- Customer Profile -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="Describe who would use your product">
             Ideal Customer Profile <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="ideal_customer_profile">
@@ -85,7 +85,7 @@
 
         <!-- Product Idea -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="Explain your product idea">
             Product Idea <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="product_idea">
@@ -103,7 +103,7 @@
 
         <!-- Pain Points -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="What problems does this solve?">
             Pain Points <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="pain_points">
@@ -121,7 +121,7 @@
 
         <!-- Alternatives -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="What similar solutions exist?">
             Alternatives <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="alternatives">
